--- a/src/components/Day 5 - Artists/Artists.css
+++ b/src/components/Day 5 - Artists/Artists.css
@@ -1,6 +1,7 @@
 table {
     width: 100%;
     text-align: center;
+    margin-top: 1.5rem;
 }
 
 th, td {
@@ -8,5 +9,6 @@ th, td {
 }
 
 table, th, td {
-    border: 1px solid black
+    border: 1px solid black;
+    border-collapse: collapse;
 }
