--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,30 @@ body {
 .flow > * + * {
     margin-top: 1.25rem;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Table */
+table {
+    width: 100%;
+    text-align: center;
+    margin-top: 1.25rem;
+}
+
+th, td {
+    padding: 0.5rem;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
