--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,74 @@
 *,
 ::after,
 ::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 button,
 input {
-    font: inherit;
+  font: inherit;
+}
+
+img, picture {
+  max-width: 100%;
+  display: block;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Input Reset */
 input[type='checkbox'] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type=number] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
+  font-family: 'Roboto', sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
 }
 
 .flow > * + * {
-    margin-top: 1.25rem;
+  margin-top: 1.25rem;
 }
 
- /* Table Styling */
+/* Table Styling */
 table {
-    width: 100%;
-    text-align: center;
-    margin-top: 1.25rem;
+  width: 100%;
+  text-align: center;
+  margin-top: 1.25rem;
 }
 
 th, td {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .flex--justify-space {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .flex-align-center {
-    align-items: center;
+  align-items: center;
 }
 
