--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ input {
   font: inherit;
 }
 
-img, picture {
+img,
+picture {
   max-width: 100%;
   display: block;
 }
@@ -19,7 +20,8 @@ button {
 }
 
 /* Input Reset */
-input[type='checkbox'] {
+input[type="checkbox"],
+input[type="radio"] {
   cursor: pointer;
 }
 
@@ -29,12 +31,12 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   min-height: 100vh;
   display: grid;
   place-content: center;
@@ -51,11 +53,14 @@ table {
   margin-top: 1.25rem;
 }
 
-th, td {
+th,
+td {
   padding: 1rem;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
   border-collapse: collapse;
 }
@@ -71,4 +76,3 @@ table, th, td {
 .flex-align-center {
   align-items: center;
 }
-
