--- a/src/index.css
+++ b/src/index.css
@@ -66,9 +66,20 @@ td {
   border-collapse: collapse;
 }
 
+/* Form utility */
+.form {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.form > input {
+  width: 100%;
+}
+
+/* Flex Utility */
 .flex {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .flex--justify-space {
@@ -82,13 +93,4 @@ td {
 .flex--center {
   justify-content: center;
   align-items: center;
-}
-
-.form {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.form > input {
-  width: 100%;
 }
