day 35 project setup

--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,16 @@ td {
   justify-content: center;
   align-items: center;
 }
+
+/* Grid Utility */
+.grid {
+  display: grid;
+}
+
+.grid--content-center {
+  place-content: center;
+}
+
+.grid--items-center {
+  place-items: center;
+}
