todo project refactored

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 button,
 input {
   font: inherit;
+  text-transform: inherit;
 }
 
 img,
@@ -18,29 +19,22 @@ picture {
 button {
   cursor: pointer;
   white-space: nowrap;
+  padding: 0.35rem 1.5rem;
+  font-weight: 600;
 }
 
-/* Search Reset */
 input[type="checkbox"],
 input[type="radio"] {
   cursor: pointer;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type="number"] {
-  -moz-appearance: textfield;
-}
-
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Barlow Semi Condensed", sans-serif;
   min-height: 100vh;
   display: grid;
   place-content: center;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .flow > * + * {
