--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ td {
   gap: 0.5rem;
 }
 
+.flex--justify-center {
+  justify-content: center;
+}
+
 .flex--justify-space {
   justify-content: space-between;
 }
@@ -109,4 +113,22 @@ td {
 
 .grid--items-center {
   place-items: center;
+}
+
+/* Margins */
+.margin-300 {
+  margin-top: 2rem;
+}
+
+.margin-200 {
+  margin-top: 1.5rem;
+}
+
+.margin-100 {
+  margin-top: 1rem;
+}
+
+/* Width */
+.width-100 {
+  width: 100%;
 }
