--- a/src/index.css
+++ b/src/index.css
@@ -59,10 +59,6 @@ table {
   margin-top: 1.25rem;
 }
 
-table input {
-  width: 100%;
-}
-
 th,
 td {
   padding: 1rem;
@@ -158,4 +154,16 @@ td {
 
 .width-100 {
   width: 36rem;
+}
+
+.width-100-percent {
+  width: 100%;
+}
+
+.width-50-percent {
+  width: 50%;
+}
+
+.width-25-percent {
+  width: 25%;
 }
